--- a/app/views/travels/index.html.erb
+++ b/app/views/travels/index.html.erb
@@ -1,23 +1,25 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5iSIclcLYfM5GssBDVPFUGMdSBuwS-bY
-&libraries=places"></script>
-</head>
-<body>
-
-</body>
-</html>
-<h1>Hello World</h1>
-
-
-<form>
-  First name:<br>
-  <input type="text" name="firstname" id = "autocomplete" style="width: 40%"><br>
-  Last name:<br>
-  <input type="text" name="lastname">
-</form>
-
-
-<!-- http://jsfiddle.net/doktormolle/aZrvs/ -->
+<div class="container-fluid">
+	<div class="container">
+		<div class="row align-form">
+			<div class="col-md-3">
+				<div class="text-center align-logo-img">
+				  <figure>
+				    <%= image_tag("logo.jpg", alt: "Application Logo", class: "img-circle custom-logo") %>
+				  </figure>
+				</div>				
+			</div>
+			<div class="col-md-9">
+				<div class="row">
+					<div class="col-md-2"></div>
+					<div class="col-md-6 text-center">
+						<div class="login-heading-area">
+				      <h1><%= I18n.t("web.create_your_account") %></h1>
+				    </div>
+				    <%= render 'signup' %>
+					</div>
+					<div class="col-md-4"></div>	
+				</div>				
+			</div>
+		</div>
+	</div>  
+</div>
