--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -16,7 +16,7 @@ body{
 
 
 .align-form{
-	margin: 100px 20px;
+	margin: 8px 20px;
 }
 
 .login-heading-area{
@@ -67,4 +67,17 @@ body{
 	color: red  !important;
 	float: left;
 	margin: 1px 0px 10px 0px;
+}
+.welcm-txt{
+	color: white;
+	font-size: 15px;
+}
+.jumbotron{
+	background-color: black !important;
+	margin: -10px 0px 0px 0px !important;
+	color: white !important;
+	font-size: 65px;
+	border: solid 0.1px grey;
+	border-left: 0px solid;
+	border-right: 0px solid;
 }
