--- a/app/views/travels/_signup.html.erb
+++ b/app/views/travels/_signup.html.erb
@@ -17,6 +17,6 @@
     </div>
     <p class="agree-to-use"> <%= I18n.t("web.agreement") %> <%= link_to I18n.t("web.privacy"), "#" %> and <%= link_to I18n.t("web.tos"), "#" %>.</p>
     <%= f.submit I18n.t("web.get_started"), class: "form-submit" %>
+    <!-- <button type="button" class="btn btn-info btn-block">Block-level Button</button> -->
 <% end %>
-
 <!-- http://jsfiddle.net/doktormolle/aZrvs/ -->
