--- a/app/views/travels/index.html.erb
+++ b/app/views/travels/index.html.erb
@@ -1,5 +1,5 @@
-<div class="jumbotron jumbotron-fluid text-center">
-  <div class="container">
+<div class="container-fluid text-center">
+  <div class="page-header welcm-msg">
     <span>Welcome to Smart Travel</span>
   </div>
 </div>
@@ -21,6 +21,8 @@
               <h1><%= I18n.t("web.create_your_account") %></h1>
             </div>
             <%= render 'travels/signup' %>
+            <div class="or-line"><span><%= I18n.t("web.or") %></span></div>
+            <%= link_to "Skip and Continue", "#", class: "btn btn-info btn-block skip_and_con"%>
           </div>
           <div class="col-md-4"></div>
         </div>
