--- a/app/views/travels/index.html.erb
+++ b/app/views/travels/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid text-center">
   <div class="page-header welcm-msg">
-    <span>Welcome to Smart Travel</span>
+    <span><%= I18n.t("web.welcome") %></span>
   </div>
 </div>
 <div class="container-fluid">
