changes in the login form css

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -93,5 +93,19 @@ body{
 	margin: 5px 0px;
 }
 .login-form{
-	margin: 80px 0px;
+	margin: 90px 0px;
+}
+.login-frm-hdr{
+	color: white !important;
+	font-size: 35px;
+	margin: 10px 0px !important;
+	outline: 0.1px solid whitesmoke;
+	padding: 20px 0px;
+}
+
+.logo-img{
+	height: 50px;
+	width: 50px;
+	float: right;
+	margin: -47px 10px 0px 0px;
 }
