--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -81,7 +81,7 @@ body{
 
 .welcm-msg{
 	color: white !important;
-	font-size: 65px;
+	font-size: 60px;
 	margin: 10px 0 20px !important;
 }
 
@@ -108,4 +108,49 @@ body{
 	width: 50px;
 	float: right;
 	margin: -47px 10px 0px 0px;
+}
+
+.login-div{
+	border: 0.1px dashed grey;
+}
+
+.login-heading{
+  color: white;
+  margin: 20px 0px;
+  font-size: 30px;
+}
+
+@media (max-width: 990px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+}
+.dont-have-account{
+	color: lightgrey;
+  margin: 20px 0px;
+  font-size: 15px;	
+}
+.page-header{
+	margin: 50px 0px 0px 0px!important;
 }
