google place api implementation

--- a/app/views/travels/index.html.erb
+++ b/app/views/travels/index.html.erb
@@ -22,7 +22,7 @@
             </div>
             <%= render 'travels/signup' %>
             <div class="or-line"><span><%= I18n.t("web.or") %></span></div>
-            <%= link_to "Skip and Continue", "#", class: "btn btn-info btn-block skip_and_con"%>
+            <%= link_to I18n.t("web.skip_and_continue"), dublin_bus_url , class: "btn btn-info btn-block skip_and_con"%>
           </div>
           <div class="col-md-4"></div>
         </div>
