--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -81,7 +81,7 @@ body{
 
 .welcm-msg{
 	color: white !important;
-	font-size: 60px;
+	font-size: 65px;
 	margin: 10px 0 20px !important;
 }
 
@@ -153,4 +153,7 @@ body{
 }
 .page-header{
 	margin: 50px 0px 0px 0px!important;
+}
+.sesn-link{
+	margin: 0px 10px;
 }
