--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,20 +23,21 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li><a href="javascript:void(0)"><%= I18n.t("web.dublin_bikes") %></a></li>
-        <li><a href="javascript:void(0)"><%= I18n.t("web.dublin_bus") %></a></li>
+        <li><%= link_to I18n.t("web.dublin_bikes"), dublin_bikes_url %></li>
+        <li><%= link_to I18n.t("web.dublin_bus"), dublin_bus_url %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> <%= I18n.t("web.sign_up") %></a></li>
+        <%= sign_up_path %>
+        <%= login_logout_path %>
         <li>
-          <% if current_user %> 
-            <%= link_to destroy_user_session_path, method: :delete  do %>
-              <span class="glyphicon glyphicon-log-in"></span> <%= I18n.t("web.log_out") %>
-            <% end %>
-          <% else %>
-            <%= link_to new_user_session_path do %>
-                <span class="glyphicon glyphicon-log-in"></span> <%= I18n.t("web.log_in") %>
-            <% end %>
+          <%= form_tag("/dublin_bus", method: "get", class: "navbar-form") do %>
+            <div class="input-group">
+              <%= text_field_tag 'input',"" ,class: "form-control", placeholder: search_form_placeholder %>
+              <div class="input-group-btn">
+                <button class="btn btn-default" type="submit">
+                  <i class="glyphicon glyphicon-search"></i>
+                </button>
+              </div>
           <% end %>
         </li>
       </ul>
@@ -45,6 +46,3 @@
   <%= yield %>
   </body>
 </html>
-
-
-
