--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,17 +29,19 @@
       <ul class="nav navbar-nav navbar-right">
         <%= sign_up_path %>
         <%= login_logout_path %>
-        <li>
-          <%= form_tag("/dublin_bus", method: "get", class: "navbar-form") do %>
-            <div class="input-group">
-              <%= text_field_tag 'input',"" ,class: "form-control", placeholder: search_form_placeholder %>
-              <div class="input-group-btn">
-                <button class="btn btn-default" type="submit">
-                  <i class="glyphicon glyphicon-search"></i>
-                </button>
-              </div>
-          <% end %>
-        </li>
+        <% if current_user %>
+          <li>
+            <%= form_tag("/dublin_bus", method: "get", class: "navbar-form") do %>
+              <div class="input-group">
+                <%= text_field_tag 'input',"" ,class: "form-control", placeholder: search_form_placeholder %>
+                <div class="input-group-btn">
+                  <button class="btn btn-default" type="submit">
+                    <i class="glyphicon glyphicon-search"></i>
+                  </button>
+                </div>
+            <% end %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </nav>
