--- a/app/views/travels/dublin_bus.html.erb
+++ b/app/views/travels/dublin_bus.html.erb
@@ -4,22 +4,31 @@
   </div>
 </div>
 <div class="container-fluid">
-  <div class="container">
-    <div class="panel-group" id="accordion">
-      <% @results && @results.first(10).each do |result| %>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Collapsible Group 1</a>
-            </h4>
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <div class="panel-group dublin-bus-list" id="accordion">
+        <% @results && @results.first(10).each do |result| %>
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <div class= "accordion-toggle">
+                  <%= link_to"#" + result["id"], "data-toggle": "collapse", "data-parent": "#accordion", "data-stop-name": result["name"], class: "stop-info" do %>
+                    <span><%= result["name"] %></span>
+                    <%= image_tag result["icon"], alt: "icon", class: "location-icon" %>
+                  <% end %>  
+                </div>
+              </h4>
+            </div>
+            <div id="<%= result["id"] %>" class="panel-collapse collapse" data-stop-name = "<%= result["name"] %>">
+              <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+            </div>
           </div>
-          <div id="collapse1" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-          </div>
-        </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
+    <div class="col-md-2"></div>
   </div>
 </div>
