--- a/app/views/travels/dublin_bus.html.erb
+++ b/app/views/travels/dublin_bus.html.erb
@@ -21,9 +21,8 @@
               </h4>
             </div>
             <div id="<%= result["id"] %>" class="panel-collapse collapse" data-stop-name = "<%= result["name"] %>">
-              <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+              <div class="panel-body hide">
+              </div>
             </div>
           </div>
         <% end %>
