--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,11 +29,11 @@
       <ul class="nav navbar-nav navbar-right">
         <%= sign_up_path %>
         <%= login_logout_path %>
-        <% if current_user %>
+        <% if display_search_tab %>
           <li>
-            <%= form_tag("/dublin_bus", method: "get", class: "navbar-form") do %>
+            <%= form_tag(fetch_action, method: "get", class: "navbar-form") do %>
               <div class="input-group">
-                <%= text_field_tag 'input',"" ,class: "form-control", placeholder: search_form_placeholder %>
+                <%= text_field_tag 'input',params["input"] ,class: "form-control", placeholder: search_form_placeholder %>
                 <div class="input-group-btn">
                   <button class="btn btn-default" type="submit">
                     <i class="glyphicon glyphicon-search"></i>
@@ -45,6 +45,12 @@
       </ul>
     </div>
   </nav>
+  <% flash.each do |key, value| %>
+    <div class="<%= flash_class(key) %> text-center flash-msg">
+      <%= value %>
+    </div>
+  <% end %>
   <%= yield %>
   </body>
 </html>
+ 
