Dublin Bus web service integration

--- a/app/views/travels/stop_info.html.erb
+++ b/app/views/travels/stop_info.html.erb
@@ -23,7 +23,7 @@
             <div id="dublin-bus-stop" class="panel-collapse">
               <div class="panel-body">
               	<ul class='list-group'>
-	              	<% @stop_info.each_with_index do |stop, i| %>
+	              	<% @stop_info && @stop_info.each_with_index do |stop, i| %>
 	              		<% if i + 1 != @stop_info.length %>
 		              		<li class="list-group-item">
 			              		<% stop.each do |key, val| %>
