--- a/app/views/travels/_searched_history.html.erb
+++ b/app/views/travels/_searched_history.html.erb
@@ -1,10 +1,10 @@
-<div class="panel panel-default dublin-bus-list text-center">
+<div class="panel panel-default dublin-bus-list">
   <div class="panel-heading"><%= I18n.t("web.searched_history") %></div>
   <div class="panel-body">
-    <% if @searched_history %>
+    <% if @search_history %>
       <ul class='list-group'>
         <% @search_history.each do |history| %>
-          <%= link_to(stop_info_url(input: history.stop_id)) do %>
+          <%= link_to(transport_url(history)) do %>
             <li class = "list-group-item">
               Name: <b><%= history.stop_name %></b>
             </li>
