--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@
       <%= value %>
     </div>
   <% end %>
+  <div data-location = "<%= request.location.coordinates %>"></div>
   <%= yield %>
   </body>
 </html>
