Removed google places api

--- a/app/views/travels/dublin_bikes.html.erb
+++ b/app/views/travels/dublin_bikes.html.erb
@@ -12,6 +12,7 @@
         <% @bike_list && @bike_list.each do |result| %>
           <% next if calculate_dist(result) %>
           <% counter += 1 %>
+          <% break if counter == 20 %>
           <div class="panel panel-default">
             <div class="panel-heading">
               <h4 class="panel-title">
