--- a/app/views/travels/stop_info.html.erb
+++ b/app/views/travels/stop_info.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="container-fluid">
-	<div class="row">
+  <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-8">
       <div class="panel-group dublin-bus-list" id="accordion">
@@ -22,17 +22,36 @@
             </div>
             <div id="dublin-bus-stop" class="panel-collapse">
               <div class="panel-body">
-              	<ul class='list-group'>
-	              	<% @stop_info && @stop_info.each_with_index do |stop, i| %>
-	              		<% if i + 1 != @stop_info.length %>
-		              		<li class="list-group-item">
-			              		<% stop.each do |key, val| %>
-			              			<span class = 'bus-detail'><%= key.humanize %> : <b><%= val %></b> </span>
-				              	<% end %>	
-			              	</li>
-			              <% end %>
-	              	<% end %>
-	              </ul>
+                  <% @stop_info && @stop_info.each_with_index do |stop, i| %>
+                  <ul class='list-group'>
+                    <% if i + 1 != @stop_info.length %>
+                      <li class="list-group-item">
+                        <%= I18n.t("web.destination") %>
+                        <b><%= stop["destination"] %></b>
+                      </li>
+                      <li class="list-group-item">
+                        <%= I18n.t("web.origin") %>
+                        <b><%= stop["origin"] %></b>
+                      </li>
+                      <li class="list-group-item">
+                        <%= I18n.t("web.due_time") %>
+                        <b><%= stop["duetime"] %> mins</b>
+                      </li>
+                      <li class="list-group-item">
+                        <%= I18n.t("web.departuredatetime") %>
+                        <b><%= stop["departuredatetime"] %></b>
+                      </li>
+                      <li class="list-group-item">
+                        <%= I18n.t("web.scheduledarrivaldatetime") %>
+                        <b><%= stop["scheduledarrivaldatetime"] %></b>
+                      </li>
+                      <li class="list-group-item">
+                        <%= I18n.t("web.route") %>
+                        <b><%= stop["route"] %></b>
+                      </li>
+                    <% end %>
+                  </ul>
+                  <% end %>
               </div>
             </div>
           </div>
