--- a/app/views/travels/dublin_bikes.html.erb
+++ b/app/views/travels/dublin_bikes.html.erb
@@ -1,6 +1,7 @@
 <div class="container-fluid text-center">
   <div class="page-header welcm-msg">
-    <span><%= I18n.t("web.dublin_bikes") %></span>
+    <%= image_tag "bikes.jpg", alt: "Responsive image", class: "cover-img" %>
+    <span class="centered"><%= I18n.t("web.dublin_bikes") %></span>
   </div>
 </div>
 <div class="container-fluid">
