--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/"><%= welcome_msg %></a>
+      <a class="navbar-brand" href="/"><%= I18n.t("app_name") %></a>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -27,6 +27,7 @@
         <li><%= link_to I18n.t("web.dublin_bus"), dublin_bus_url %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <%= welcome_msg %>
         <%= sign_up_path %>
         <%= login_logout_path %>
         <% if display_search_tab %>
@@ -35,7 +36,7 @@
               <div class="input-group">
                 <%= text_field_tag 'input',params["input"] ,class: "form-control", placeholder: search_form_placeholder %>
                 <div class="input-group-btn">
-                  <button class="btn btn-default" type="submit">
+                  <button class="btn btn-default search-btn" type="submit">
                     <i class="glyphicon glyphicon-search"></i>
                   </button>
                 </div>
