--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -163,7 +163,7 @@ body{
 
 .accordion-toggle {
   display: block;
-  padding: 40px 0px;
+  padding: 30px 0px;
   margin: 4px 0px;
 }
 
@@ -242,4 +242,8 @@ body{
    filter: blur(8px);	
 }
 
-
+.calc-dist-btn {
+    float: right;
+    margin: -8px 15px 0px 0px;
+    position: relative;
+}
