--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,21 @@
   <% end %>
   <div data-location = "<%= request.location.coordinates %>"></div>
   <%= yield %>
+    <div class="modal fade" id="myModal" role="dialog">
+      <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content text-center">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title"><%= I18n.t("web.distance_from_location") %></h4>
+        </div>
+        <div class="modal-body"></div>
+      </div>
+      
+    </div>
+  </div>
+
   </body>
 </html>
  
