--- a/app/views/travels/dublin_bus.html.erb
+++ b/app/views/travels/dublin_bus.html.erb
@@ -9,11 +9,8 @@
     <div class="col-md-<%= verify_current_user %>"></div>
     <div class="col-md-8">
       <div class="panel-group dublin-bus-list" id="accordion">
-        <% counter = 0 %>
-        <% @results && @results.each do |result| %>
-          <% next if dublin_bus_calc_dist(result) %>
-          <% counter += 1 %>
-          <% break if counter == 15 %>
+
+        <% @results.each do |result| %>
           <div class="panel panel-default">
             <div class="panel-heading">
               <h4 class="panel-title">
@@ -22,24 +19,13 @@
                     <span><%= result["shortname"] %></span>
                     <%= image_tag "bus-icon.jpg", alt: "icon", class: "location-icon" %>
                   <% end %>
-                  <input type="button" class="btn btn-info calc-dist-btn" value="Calculate Distance" data-location = "[<%= result["latitude"] %>, <%= result["longitude"] %>]" id="stop<%= result["stopid"] %>">
+                  <input type="button" class="btn btn-info calc-dist-btn" value="Calculate Distance" data-location = "[<%= result["latitude"] %>, <%= result["longitude"] %>]" id="stop<%= result["stopid"] %>" data-distance = "<%= result["distance"] %>" >
                 </div>
               </h4>
             </div>
             <div id="<%= result["stopid"] %>" class="panel-collapse collapse" data-stop-name = "<%= result["name"] %>">
               <div class="panel-body hide">
               </div>
-            </div>
-          </div>
-        <% end %>
-        <% if counter == 0 %> %>
-          <div class="panel panel-default">
-            <div class="panel-heading text-center">
-              <h4 class="panel-title">
-                <div class= "accordion-toggle">
-                  <%= I18n.t("web.no_search_result") %>
-                </div>
-              </h4>
             </div>
           </div>
         <% end %>
