Displaying user image functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
         <li><%= link_to I18n.t("web.dublin_bus"), dublin_bus_url %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <%= display_image %>
         <%= welcome_msg %>
         <%= sign_up_path %>
         <%= login_logout_path %>
